Set max height of the body to full viewport, so that the page is no longer than the screen and the bottom menu block is always visible.

--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@
     border-radius: 46.5px;
 }
 .mid_block{
-    background: linear-gradient(0deg, rgba(253,232,236,1) 70%, rgba(255,255,255,1) 100%);    height: 641px;
+    background: linear-gradient(0deg, rgba(253,232,236,1) 70%, rgba(255,255,255,1) 100%);
+    height: 641px;
     border-radius: 22px;
 }
 
@@ -17,3 +18,8 @@
 h1 {
     margin: 0px;
 }
+body {
+    height: 100vh;
+    max-height: 100vh;
+    padding: 0;
+  }
